新增自动更新 playwright，自动执行用例脚本，封装 log 模块

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,22 @@
 [pytest]
 
-addopts : --headed --video=on --tracing=on
+# 测试用例目录
+addopts = --alluredir=./report/allure-results -v -s --tb=short --headed --video=on --tracing=on
+
+# 配置编码
+python_files = test_*.py *_test.py
+python_classes = Test* *Test
+python_functions = test_*
+
+# 配置 Allure 环境信息
+env_info =
+    OS: {platform}
+    Python: {sys.version}
+    Pytest: {pytest_version}
+    Allure: {allure_version}
+
+# 配置日志级别
+log_cli = true
+log_cli_level = INFO
+log_format = %(asctime)s %(levelname)s %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
