--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 
 # 测试用例目录
-addopts = --alluredir=./report/allure-results -v -s --tb=short --headed --video=on --tracing=on
-
+;addopts = --alluredir=./report/allure-results -v -s --tb=short --headed --video=on --tracing=on
+addopts = -v -s --tb=short --headed --video=on --tracing=on
 # 配置编码
 python_files = test_*.py *_test.py
 python_classes = Test* *Test
